<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- 第一个部分-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff13bfef"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_back"
            style="@style/AddPointTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:text="@string/back" />

        <TextView
            android:id="@+id/tv_add"
            style="@style/AddPointTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/add" />
    </RelativeLayout>
    <!--第二部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SurveyText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/point_name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SurveyText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/height" />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SurveyText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/des" />

            <EditText
                android:inputType="text"
                android:id="@+id/et_des"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        style="@style/SurveyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/info" />

    <!-- 第三部分,用scrollview来显示里面的大部分数据，而且其中的类型高度被设置为固定-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/textshape1"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/AddPointInfo"
                    android:text="@string/B" />

                <TextView
                    android:id="@+id/tv_B"
                    style="@style/AddPointInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/AddPointInfo"
                    android:text="@string/L" />

                <TextView
                    android:id="@+id/tv_L"
                    style="@style/AddPointInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/AddPointInfo"
                    android:text="@string/H" />

                <TextView
                    android:id="@+id/tv_H"
                    style="@style/AddPointInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/AddPointInfo"
                    android:text="@string/N" />

                <TextView
                    android:id="@+id/tv_N"
                    style="@style/AddPointInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/AddPointInfo"
                    android:text="@string/E" />

                <TextView
                    android:id="@+id/tv_E"
                    style="@style/AddPointInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/AddPointInfo"
                    android:text="@string/Z" />

                <TextView
                    android:id="@+id/tv_Z"
                    style="@style/AddPointInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/AddPointInfo"
                    android:text="@string/location_SN" />

                <TextView
                    android:id="@+id/tv_DireB"
                    style="@style/AddPointInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/AddPointInfo"
                    android:text="@string/location_EW" />

                <TextView
                    android:id="@+id/tv_DireL"
                    style="@style/AddPointInfo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/AddPointInfo"
                    android:text="@string/add_time" />

                <TextView
                    android:id="@+id/tv_time"
                    style="@style/AddPointInfo"
                    android:layout_height="60dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>