<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/image_title"
            android:layout_width="174dp"
            android:layout_centerHorizontal="true"
            android:layout_height="103dp"
            android:scaleType="fitXY"
            android:src="@mipmap/img_gps" />
        <TextView
            android:id="@+id/tv_device_info"
            android:text="@string/unconnected"
            style="@style/ConnectInfo"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BluetoothText"
        android:text="@string/title_item"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/factory"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:prompt="@string/device_title"
            android:spinnerMode="dialog"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/way"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_way"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="false"
            android:prompt="@string/way_title"
            android:spinnerMode="dialog"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/connect"
            style="@style/ConnectButton"/>
    </LinearLayout>
</LinearLayout>