<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FFFFBB33"
        android:textColor="#fff"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/project_create"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_pro_name"
        style="@style/EditType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/input_project_name" />

    <EditText
        android:id="@+id/et_pro_back"
        style="@style/EditType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/input_project_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/coordinate"
            android:textColor="#ff000000"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/sp_coordinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/guass"
            android:textColor="#ff000000"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/sp_guass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>
</LinearLayout>