<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        style="@style/ProjectTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/current_project" />

    <LinearLayout
        android:id="@+id/ll_proinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:orientation="vertical">

        <LinearLayout
            style="@style/ProjectLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ProjectInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/project_name" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/ProjectInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000" />

        </LinearLayout>

        <LinearLayout
            style="@style/ProjectLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ProjectInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coordinate" />

            <TextView
                android:id="@+id/tv_coordinate"
                style="@style/ProjectInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000" />

        </LinearLayout>

        <LinearLayout
            style="@style/ProjectLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ProjectInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guass" />

            <TextView
                android:id="@+id/tv_guass"
                style="@style/ProjectInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000" />

        </LinearLayout>
        <LinearLayout
            style="@style/ProjectLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ProjectInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lasttime" />

            <TextView
                android:id="@+id/tv_lasttime"
                style="@style/ProjectInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_pro_title"
        style="@style/ProjectTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_proinfo"
        android:text="@string/created_project" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/tv_pro_title"
        android:background="@drawable/tab_selector"
        android:dividerHeight="2dp"></ListView>
</RelativeLayout>